# AI_cycling_coach

./: .claudeignore  .geminiignore  .gitignore  CLAUDE.md  README.md  analyze.py  code_improvements.md  inbox.sh  plan1.md  pr_report.py  pyproject.toml  report.py  requirements.txt
.claude/agents/: cycling-coach.md
.claude/plans/: new-skills-roadmap.md
.claude/skills/fitness-fatigue-model/: SKILL.md
.claude/skills/heart-rate-aerobic-efficiency/: SKILL.md
.claude/skills/interval-execution-analysis/: SKILL.md
.claude/skills/power-duration-profiling/: SKILL.md
.claude/skills/session-creation/: SKILL.md
.claude/skills/session-matching/: SKILL.md
.claude/workflows/: 3_week_plan_workflow.md  analysis-workflow.md  block-retrospective.md  coach_log_template.json  planning-adjustment.md  session-analysis.md  weekly-critique.md
.gemini/: settings.json
cycling_analyzer/: __init__.py  analyzer.py  fitness_model.py  formatter.py  models.py  parser.py  power_records.py  reporter.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/: App.module.css  App.tsx  index.css  main.tsx
frontend/src/components/: BlockReportViewer.module.css  BlockReportViewer.tsx  CoachLogViewer.module.css  CoachLogViewer.tsx  MarkdownViewer.module.css  MarkdownViewer.tsx  SessionViewer.module.css  SessionViewer.tsx  Sidebar.module.css  Sidebar.tsx  WeeklyReportViewer.module.css  WeeklyReportViewer.tsx
frontend/src/context/: FileSystemContext.tsx
frontend/src/services/: fs.ts
tests/: test_reporter.py
